--- a/AutoSvr/AutoSvr/AutoSvr.vcxproj.filters
+++ b/AutoSvr/AutoSvr/AutoSvr.vcxproj.filters
@@ -19,6 +19,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="AutoSvr.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -28,11 +31,14 @@
     <ClCompile Include="SvcControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="stdafx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="targetver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -40,9 +46,6 @@
       <Filter>Generated Files</Filter>
     </ClInclude>
     <ClInclude Include="SvcControl.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
