--- a/AutoSvr/AutoSvr.vcxproj
+++ b/AutoSvr/AutoSvr.vcxproj
@@ -239,6 +239,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SvcControl.h" />
+    <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="AutoSvr.rc" />
