--- a/AutoSvr/AutoSvr.vcxproj.filters
+++ b/AutoSvr/AutoSvr.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="targetver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="AutoSvr.rc">
